# localphish-chrome

./: .gitattributes  .gitignore  ATTRIBUTIONS.md  CLAUDE.md  LICENSE  README.md
docs/: final_report.md
eval/: .gitignore  README.md  build_bloom_filter.py  build_golden_200.py  build_report_pdf.py  check_signal_spec_parity.py  compare_tiers.py  fetch_165_articles.py  fetch_phreshphish.py  fetch_tranco.py  fetch_tw_scam_domains.py  pyproject.toml  tier_a_static.py  tier_b_rendered.py  tier_c_cascade_llm.py  tier_c_per_signal_precision.py  tier_d_benign_fpr.py  tier_d_python_llm.py  tier_e_adversarial.py  tier_e_llm_in_loop.py  tier_f2_tw_allowlist_effect.py  tier_f_production.py  tier_g_tw_phish.py  tier_h_gsb_baseline.py
eval/datasets/: golden_200.jsonl  tw_165_articles.json
eval/results/: TIER_A_FIRST_RUN.md  TIER_A_FOURTH_RUN.md  TIER_A_SECOND_RUN.md  TIER_A_THIRD_RUN.md  tier_a_summary.json  tier_c_per_signal_precision.json  tier_c_summary.json  tier_compare.json  tier_d_benign_fpr.json  tier_d_summary.json  tier_e_llm_results.json  tier_e_results.json  tier_f2_summary.json  tier_f_summary.json  tier_g_summary.json  tier_h_summary.json
eval/src/localphish_eval/: __init__.py  dom_features.py  rules.py
extension/: README.md  manifest.config.ts  package-crx.mjs  package-lock.json  package.json  tsconfig.json  vite.config.ts  vitest.config.ts
extension/src/: types.ts
test/: README.md  serve.py
test/fixtures/: bidi-override-fake.html  crypto-wallet-connect-fake.html  evilginx-microsoft-fake.html  microsoft-365-login-fake.html  paypal-verify-fake.html  (+1 more)
(+72 files in other folders)
