[project]
name = "localphish-eval"
version = "0.1.0"
description = "Tier A (static) and Tier B (rendered) evaluation pipelines for LocalPhish."
requires-python = ">=3.11"
readme = "README.md"

# Runtime deps. Tier A uses BS4 for static parse; Tier B uses Playwright to
# render and inject the extension's content-script bundle.
dependencies = [
    "beautifulsoup4>=4.12",
    "lxml>=5.2",
    "pandas>=2.2",
    "scikit-learn>=1.5",
    "tldextract>=5.1",
    "tqdm>=4.66",
    "rich>=13.7",
    "httpx>=0.27",
    "playwright>=1.48",
    "pillow>=10.4",
]

[project.optional-dependencies]
# Brand-DB build pipeline (CLIP embeddings). Heavy; install only when needed.
brand-db = [
    "torch>=2.4",
    "open-clip-torch>=2.26",
    "onnx>=1.16",
    "onnxruntime>=1.19",
]

dev = [
    "ruff>=0.6",
    "pytest>=8.3",
    "mypy>=1.11",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/localphish_eval"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "B", "UP"]
